# libpafe-rs

./: Cargo.toml  README.md
libpafe/: Cargo.toml  DEVELOPMENT.md  NOTICE  README.md
libpafe/benches/: checksum_bench.rs  encoding_bench.rs  protocol_bench.rs
libpafe/examples/: nfc_multi_type.rs  s330_probe.rs
libpafe/src/: constants.rs  error.rs  lib.rs  prelude.rs  test_support.rs  types.rs
libpafe/src/card/: builder.rs  info.rs  mod.rs
libpafe/src/card/operations/: mod.rs  read.rs  service.rs  write.rs
libpafe/src/device/: builder.rs  handle.rs  mod.rs
libpafe/src/device/models/: mod.rs  noop.rs
libpafe/src/device/models/s310/: mod.rs  (+2 more)
libpafe/src/protocol/: checksum.rs  codec.rs  frame.rs  mod.rs  parser.rs
libpafe/src/protocol/commands/: mod.rs  polling.rs  read.rs  search.rs  service.rs  system.rs  write.rs
libpafe/src/protocol/responses/: mod.rs  polling.rs  read.rs  search.rs  service.rs  system.rs  write.rs
libpafe/src/transport/: mock.rs  mod.rs  traits.rs
libpafe/src/transport/usb/: descriptor.rs  mod.rs
libpafe/src/utils/: hex.rs  mod.rs  timeout.rs
libpafe/tests/: device.rs  hardware.rs  protocol.rs  transport.rs
libpafe/tests/common/: fixtures.rs  helpers.rs  mod.rs
libpafe/tests/device/: mock_polling_test.rs  mock_read_test.rs  type_state_test.rs
libpafe/tests/hardware/: README.md  common.rs  s310_test.rs  s320_test.rs  s330_test.rs
libpafe/tests/protocol/: checksum_test.rs  command_encode_test.rs  frame_integration_test.rs  response_decode_test.rs
libpafe/tests/transport/: mock_transport_test.rs  transport_error_test.rs
(+11 files in other folders)
